syntax = "proto2";

package grannyroomba.messages;

option java_package = "org.flupes.ljf.grannyroomba.messages";
option java_outer_classname = "StopProto";

message StopMsg {

	enum Mode {
		NORMAL = 0;
		EMMERGENCY = 1;
	}

	optional Mode mode = 1 [ default = NORMAL ];

}